@@ -1,5 +1,8 @@
 package org.lazywizard.lazylib.combat;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 import com.fs.starfarer.api.Global;
 import com.fs.starfarer.api.campaign.CampaignFleetAPI;
 import com.fs.starfarer.api.campaign.LocationAPI;
@@ -14,9 +17,6 @@ import com.fs.starfarer.api.combat.ShipAPI;
 import com.fs.starfarer.api.fleet.FleetMemberAPI;
 import com.fs.starfarer.api.fleet.FleetMemberType;
 import com.fs.starfarer.api.mission.FleetSide;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 import org.apache.log4j.Level;
 import org.lazywizard.lazylib.LazyLib;
 import org.lazywizard.lazylib.MathUtils;
@@ -50,7 +50,7 @@ public class CombatUtils
     {
         CombatFleetManagerAPI fm = Global.getCombatEngine()
                 .getFleetManager(ship.getOriginalOwner());
-        // TODO: replace with getDeployedFleetMemberEvenIfDisabled() once .6.5a lands
+        // TODO: replace with getDeployedFleetMemberEvenIfDisabled() once .65a lands
         // That should let us remove 90% of this method's complexity
         DeployedFleetMemberAPI dfm = fm.getDeployedFleetMember(ship);
 
