@@ -1,11 +1,21 @@
  2.0 (someday)
 ===============
 Renamed FleetUtils to CampaignUtils
+Changes to EllipseUtils:
+ - Added Vector2f getRandomPointInEllipse(Vector2f ellipseCenter,
+   float ellipseWidth, float ellipseHeight, float ellipseAngleOffset)
+Changes to VectorUtils:
+ - Added List<Vector2f> rotate(List<Vector2f> toRotate, float angle)
+ - Added List<Vector2f> rotateAroundPivot(List<Vector2f> toRotate,
+   Vector2f pivotPoint, float angle)
 Changes to CampaignUtils:
  - Changed all method arguments to use a SectorEntityToken instead of a
    CampaignFleetAPI wherever applicable
  - Added areSameFaction(SectorEntityToken token1, SectorEntityToken token2)
  - Added isShipInMothballed(String fleetMemberId, CargoAPI cargo)
+Changes to WeaponUtils:
+ - Fixed getNearestAllyInArc() returning the host ship
+ - Fixed getAlliesInArc() including the host ship
 Removed all pre-existing deprecated methods from the code
 Removed all methods with a 'sortByDistance' parameter
  - Use Collections.sort(list, new CollectionUtils.SortXByDistance(location))
